update scripts after rerun

--- a/Calc_scale_alpha.ipynb
+++ b/Calc_scale_alpha.ipynb
@@ -166,12 +166,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:12<00:00,  6.01s/it]\n"
+      " 37%|███▋      | 3636/9842 [05:56<16:58,  6.09it/s]  /jobfs/135766878.gadi-pbs/ipykernel_1740799/3179761864.py:13: RuntimeWarning: overflow encountered in exp\n",
+      "  return np.where(h == 0, 0, c + b * (1 - np.exp(-3 * h / alpha)))\n",
+      "/home/565/dl6968/miniconda3/envs/myenv/lib/python3.9/site-packages/scipy/optimize/_minpack_py.py:1010: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n",
+      "100%|██████████| 9842/9842 [21:42<00:00,  7.56it/s]\n"
      ]
     }
    ],
    "source": [
-    "max_pool = 14\n",
+    "max_pool = 28\n",
     "with Pool(max_pool) as p:\n",
     "    pool_outputs = list(\n",
     "        tqdm(\n",
