--- a/Calc_semi_variogram.ipynb
+++ b/Calc_semi_variogram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "34a1e8f6-a63b-466c-97cc-f946c4823c68",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "544de285-1340-4647-9f99-8a889029fd1e",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d55f7851-5f56-4381-80f1-fe958e268f58",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f79357bd-f557-4d10-b639-9c6cf5d95efc",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
     "##### main script starts here\n",
     "## find available stations \n",
     "\n",
-    "df = pd.read_csv(\"/g/data/w40/dl6968/CLEX_analysis/BoM_daily_stations.csv\")\n",
+    "df = pd.read_csv(\"./data/BoM_daily_stations.csv\")\n",
     "\n",
     "## remove stations that do not have data \n",
     "exclude_stn = []\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ba3b1703-90f6-432e-aee4-2cae9d0ff7d2",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "07cf48db-82b7-4b64-be73-4cc30ab09494",
    "metadata": {},
    "outputs": [],
@@ -351,13 +351,13 @@
     "percentile = 0.90 ## this is for extreme days\n",
     "pc_str = \"P90\" ## this is for the neighbours in the dataframe\n",
     "df_pc = pd.read_csv(\"./data/BoM_stn_p90.csv\")\n",
-    "max_pool = 20 ## number of CPUs for processing\n",
+    "max_pool = 28 ## number of CPUs for processing\n",
     "max_radius = 350"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bdb83478-ff67-4a63-88e7-a3080c03aa3f",
    "metadata": {},
    "outputs": [
@@ -365,44 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Look through neighbour stations\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 976/976 [00:08<00:00, 112.49it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Semi-variogram\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 647/647 [00:00<00:00, 1245.64it/s]\n",
-      "/jobfs/135674765.gadi-pbs/ipykernel_2750830/567164667.py:188: RuntimeWarning: invalid value encountered in divide\n",
-      "  ratio = 0.5*(N10/(N10+N11))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Save to CSV\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 647/647 [00:01<00:00, 551.48it/s]\n"
+      "Processing station 89090\n"
      ]
     }
    ],
@@ -411,6 +374,7 @@
     "    csv_file = f\"./data/all_AU_p90/{spec_id}_station_list_all_events.csv\"\n",
     "    ## do semi-variogram if file not exists\n",
     "    if not os.path.exists(csv_file):\n",
+    "        print(f\"Processing station {spec_id}\")\n",
     "        cent_lat, cent_lon = df[df[\"ID\"]==spec_id][\"Latitude\"].values[0],  df[df[\"ID\"]==spec_id][\"Longitude\"].values[0]\n",
     "        df_search1 = find_neighbour_stations(df_neighbour, df_neighbour[\"Latitude\"], df_neighbour[\"Longitude\"], df_neighbour['ID'], cent_lat, cent_lon, max_radius)\n",
     "        df_search = df_search1[(df_search1[\"ID\"] != spec_id) & (df_search1[\"End_Year\"]>=1960)].copy()\n",
