--- a/Calc_semi_variogram-Batch2.ipynb
+++ b/Calc_semi_variogram-Batch2.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f79357bd-f557-4d10-b639-9c6cf5d95efc",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ba3b1703-90f6-432e-aee4-2cae9d0ff7d2",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "07cf48db-82b7-4b64-be73-4cc30ab09494",
    "metadata": {},
    "outputs": [],
@@ -308,7 +308,7 @@
     "percentile = 0.90 ## this is for extreme days\n",
     "pc_str = \"P90\" ## this is for the neighbours in the dataframe\n",
     "df_pc = pd.read_csv(\"./data/BoM_stn_p90.csv\")\n",
-    "max_pool = 24 ## number of CPUs for processing\n",
+    "max_pool = 28 ## number of CPUs for processing\n",
     "max_radius = 350"
    ]
   },
@@ -317,20 +317,9 @@
    "execution_count": 8,
    "id": "bdb83478-ff67-4a63-88e7-a3080c03aa3f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing station 200304\n",
-      "Processing station 27018\n",
-      "Processing station 13011\n",
-      "Processing station 200283\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for spec_id in id_list:\n",
+    "for spec_id in id_list[-3500:]:\n",
     "    csv_file = f\"./data/all_AU_p90/{spec_id}_station_list_all_events.csv\"\n",
     "    ## do semi-variogram if file not exists\n",
     "    if not os.path.exists(csv_file):\n",
