add new scripts also for 1960 and 1980

--- a/Calc_scale_alpha-1960.ipynb
+++ b/Calc_scale_alpha-1960.ipynb
@@ -122,17 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "c27ed9e4-27ab-4beb-a62e-423b9b00f1fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = sorted(glob(\"./data/all_AU_p90_qc/*pair_bins*.csv\"))"
+    "files = sorted(glob(\"./data/all_AU_p90_1980/*pair_bins*.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bf94e8af-9c1c-4a5d-b6c6-178771fca224",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fitting semi-variogram: 100%|██████████| 252/252 [00:00<00:00, 865.78it/s]\n"
+      "Fitting semi-variogram:  88%|████████▊ | 164/187 [00:00<00:00, 797.22it/s]"
      ]
     }
    ],
