--- a/Semi-Variogram_Pairing-Batch2.ipynb
+++ b/Semi-Variogram_Pairing-Batch2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "da1ba636-485e-4743-8d7c-70f48e5c90d8",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4510116d-bfa0-4d9d-a012-249165b6ceef",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cc6cdd52-ee6a-4c15-9893-60658929b6ad",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e77acb86-72ef-4977-b576-1722d34faac9",
    "metadata": {},
    "outputs": [
@@ -123,8 +123,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 19s, sys: 6.48 s, total: 2min 26s\n",
-      "Wall time: 2min 26s\n"
+      "CPU times: user 2min 34s, sys: 6.88 s, total: 2min 41s\n",
+      "Wall time: 2min 43s\n"
      ]
     }
    ],
@@ -135,17 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3c8f1c44-2ac0-4dc4-b351-43607a644432",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = sorted(glob(\"./data/all_AU_p90_1960/*_station_moving_list_all_events.csv\"))"
+    "files = sorted(glob(\"./data/all_AU_p90_qc/*_station_moving_list_all_events.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7310ad7c-6fab-4ba8-a92c-62f5caf316f8",
    "metadata": {},
    "outputs": [],
@@ -164,13 +164,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Extreme days: 100%|██████████| 274/274 [00:00<00:00, 303.05it/s]\n"
+      "Processing Extreme days: 100%|██████████| 131/131 [00:00<00:00, 134.42it/s]\n"
      ]
     }
    ],
    "source": [
     "max_pool = 28\n",
-    "for file in files:\n",
+    "for file in files[7000:]:\n",
     "    if not os.path.exists(file.replace(\"station\",\"pair_bins\")):\n",
     "        df_mv = pd.read_csv(file)\n",
     "        # df_in = df_mv[df_mv[\"distance\"]<=350]\n",
