updaet pre-processing script

--- a/pre_process_BoM/Assign_percentile_Batch2.ipynb
+++ b/pre_process_BoM/Assign_percentile_Batch2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "56f2fd02-dbcc-4223-b97c-c817108c8c94",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,6 @@
     "from zoneinfo import ZoneInfo # Python 3.9\n",
     "# from tzwhere import tzwhere\n",
     "import pytz\n",
-    "import os\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -90,14 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "35164f31-4968-4d9d-9e66-5d1f39e1d263",
    "metadata": {},
    "outputs": [],
    "source": [
     "def percentile_nc(file):\n",
     "    if not os.path.exists(file.replace(inpath,outpath)):\n",
-    "\n",
     "        ds = xr.open_dataset(file)\n",
     "        ds_clip = ds.sel(time=slice(\"1940-03-02\", \"2024-06-30\"))\n",
     "        state = ds.attrs[\"State\"]\n",
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7f1d2f7b-b222-4fec-aa32-56cdff4d8518",
    "metadata": {},
    "outputs": [
@@ -153,21 +151,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17828/17828 [00:10<00:00, 1682.52it/s]\n"
+      "100%|██████████| 7828/7828 [2:32:05<00:00,  1.17s/it]  \n"
      ]
     }
    ],
    "source": [
     "# use multiprocess  \n",
     "# max_pool means maximum CPU to use\n",
-    "max_pool = 24\n",
+    "max_pool = 28\n",
     "\n",
     "with Pool(max_pool) as p:\n",
     "    pool_outputs = list(\n",
     "        tqdm(\n",
     "            p.imap(percentile_nc,\n",
-    "                   files),\n",
-    "            total=len(files),\n",
+    "                   files[10000:]),\n",
+    "            total=len(files[10000:]),\n",
     "            position=0, leave=True\n",
     "        )\n",
     "    )\n",
