--- a/pre_process_BoM/Find_p90_all.ipynb
+++ b/pre_process_BoM/Find_p90_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "12a095c1-f753-4664-a500-436bb2051b6c",
    "metadata": {},
    "outputs": [],
@@ -15,14 +15,17 @@
     "import pandas as pd\n",
     "import math\n",
     "from multiprocess import Pool\n",
+    "import warnings\n",
     "\n",
+    "# Suppress all warnings\n",
+    "warnings.filterwarnings('ignore', category=FutureWarning)\n",
     "## my own directory\n",
     "os.chdir(\"/g/data/k10/dl6968/Semi-variogram_AU/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c2051083-671d-4b53-a844-6c5a63ffcc9b",
    "metadata": {},
    "outputs": [],
@@ -40,20 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "fce1482a-52e0-4f0e-9709-8e42d678654f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## for stations to be a neighbour station\n",
-    "df_neighbour = df[df[\"Years\"] >=10]\n",
-    "## for stations to be a spec station\n",
-    "df_spec = df[df[\"Years\"] >=20]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "26efea0e-545a-4a7b-b85f-7d0e7a124703",
    "metadata": {},
    "outputs": [],
@@ -71,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e5efb7ba-186a-4e05-a20c-86f141d9f766",
    "metadata": {},
    "outputs": [
@@ -79,53 +69,58 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11800/11800 [13:05<00:00, 15.02it/s]\n"
+      "100%|██████████| 9881/9881 [15:16<00:00, 10.78it/s] \n"
      ]
     }
    ],
    "source": [
-    "stn_bom_p90 = {}\n",
+    "# Dictionary to store 90th percentile values for each month\n",
+    "stn_bom_p90 = {\"ID\": [], \"Jan\": [], \"Feb\": [], \"Mar\": [], \"Apr\": [], \"May\": [], \"Jun\": [],\n",
+    "               \"Jul\": [], \"Aug\": [], \"Sep\": [], \"Oct\": [], \"Nov\": [], \"Dec\": []}\n",
+    "\n",
     "faulty_stn = []\n",
-    "for stn_id in tqdm(df_neighbour[\"ID\"],leave=True, position=0):\n",
+    "\n",
+    "for stn_id in tqdm(df_neighbour[\"ID\"], leave=True, position=0):\n",
     "    bom_id = str(stn_id).zfill(6)\n",
+    "    \n",
     "    try:\n",
-    "        ds = xr.open_dataset(f\"/g/data/w40/dl6968/BoM_daily_stations/netcdf/{bom_id}.nc\")\n",
+    "        ds = xr.open_dataset(f\"/g/data/k10/dl6968/BoM_daily_station/prcp_pc_ts_qc/{bom_id}.nc\")\n",
     "    except:\n",
     "        faulty_stn.append(stn_id)\n",
     "        continue\n",
-    "        \n",
-    "    precip_da = ds[\"prcp\"].sel(time=slice(\"1940-03-02\", \"2024-06-30\"))\n",
-    "    filtered_da = precip_da.where(precip_da > 1, drop=True)\n",
-    "    if len(filtered_da)==0:\n",
-    "        stn_bom_p90[str(stn_id)] = -1\n",
+    "    \n",
+    "    precip = ds[\"prcp\"].sel(time=slice(\"1940-03-02\", \"2024-06-30\"))\n",
+    "    \n",
+    "    # Filter rainy days (precip > 1 mm)\n",
+    "    rainy_days = precip.where(precip > 1, drop=True)\n",
+    "    \n",
+    "    # If there are no rainy days, store -1 for all months\n",
+    "    if len(rainy_days) == 0:\n",
+    "        stn_bom_p90[\"ID\"].append(stn_id)\n",
+    "        for month in [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]:\n",
+    "            stn_bom_p90[month].append(-1)\n",
     "    else:\n",
-    "        p90 = filtered_da.quantile(percentile, dim='time')\n",
-    "        stn_bom_p90[str(stn_id)] = p90.values\n",
-    "    ds.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f51db57a-31b2-43a5-bd47-c8423d40e140",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p90_list = []\n",
-    "stn_list = []\n",
-    "for keys in stn_bom_p90.keys():\n",
-    "    stn_list.append(int(keys))\n",
-    "    p90_list.append(float(stn_bom_p90[keys]))"
+    "        stn_bom_p90[\"ID\"].append(stn_id)\n",
+    "\n",
+    "        # Store results for each month\n",
+    "        for month_num, month_name in enumerate([\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \n",
+    "                                                \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"], start=1):\n",
+    "            try:\n",
+    "                stn_bom_p90[month_name].append(percentile_90_monthly.sel(month=month_num).values)\n",
+    "            except:\n",
+    "                stn_bom_p90[month_name].append(-1)\n",
+    "\n",
+    "    ds.close()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "55a88bb1-a4ac-400b-a0d1-a72ea62fcd56",
+   "id": "f51db57a-31b2-43a5-bd47-c8423d40e140",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_p90 = pd.DataFrame.from_dict({\"ID\": stn_list,\"P90\":p90_list})"
+    "df_p90 = pd.DataFrame.from_dict(stn_bom_p90)"
    ]
   },
   {
@@ -135,8 +130,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_p90.to_csv(\"./data/BoM_stn_p90.csv\")"
+    "df_p90.to_csv(\"./data/BoM_stn_p90_monthly.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32d064c3-85f3-4d83-b8a7-57fbb938c4ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
