--- a/pre_process_BoM/Scraper_BoM-min_air_temp.ipynb
+++ b/pre_process_BoM/Scraper_BoM-min_air_temp.ipynb
@@ -120,18 +120,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "id": "f55c0a25-d971-41de-906a-b280e377eb16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[17721]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argwhere(df[\"ID\"].values==\"61220\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "9350eecf-ae6e-4f72-806b-89e6f5c8c85d",
    "metadata": {},
    "outputs": [],
    "source": [
     "## this is NCI directory\n",
-    "out_path = \"/g/data/k10/dl6968/BoM_daily_station/max_air_temp/\""
+    "out_path = \"/g/data/k10/dl6968/BoM_daily_station/min_air_temp/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "689358a1-d741-4999-94b6-70b94f649eea",
    "metadata": {},
    "outputs": [
@@ -139,13 +160,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/jobfs/136170706.gadi-pbs/ipykernel_76870/2226968794.py:5: DeprecationWarning: URLopener style of invoking requests is deprecated. Use newer urlopen functions/methods\n",
+      "/jobfs/136170706.gadi-pbs/ipykernel_76867/3147167792.py:5: DeprecationWarning: URLopener style of invoking requests is deprecated. Use newer urlopen functions/methods\n",
       "  scraper_daily(bom_id, obs_code, start_year)\n"
      ]
     }
    ],
    "source": [
-    "obs_code = 122 # daily precip 136\n",
+    "obs_code = 123 # daily precip 136\n",
     "station_id = 40592\n",
     "start_year = df[\"Start_Year\"].iloc[i] \n",
     "bom_id = str(station_id).zfill(6)\n",
@@ -154,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "0a3c67f5-c588-4d30-8fde-fbadb67b32c3",
    "metadata": {},
    "outputs": [
@@ -162,43 +183,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/15326 [00:00<?, ?it/s]/jobfs/136170706.gadi-pbs/ipykernel_76870/740904622.py:6: DeprecationWarning: URLopener style of invoking requests is deprecated. Use newer urlopen functions/methods\n",
+      "  0%|          | 0/214 [00:00<?, ?it/s]/jobfs/136170706.gadi-pbs/ipykernel_76867/2985992290.py:6: DeprecationWarning: URLopener style of invoking requests is deprecated. Use newer urlopen functions/methods\n",
       "  scraper_daily(bom_id, obs_code, start_year)\n",
-      " 57%|█████▋    | 8797/15326 [3:27:32<10:10:07,  5.61s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred: 503 Server Error: Service Unavailable for url: http://www.bom.gov.au/jsp/ncc/cdio/weatherData/av?p_stn_num=033170&p_display_type=availableYears&p_nccObsCode=122\n",
-      "An error occurred: 503 Server Error: Service Unavailable for url: http://www.bom.gov.au/jsp/ncc/cdio/weatherData/av?p_stn_num=041173&p_display_type=availableYears&p_nccObsCode=122\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 96%|█████████▌| 14732/15326 [5:41:23<5:40:20, 34.38s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred: 504 Server Error: Gateway Time-out for url: http://www.bom.gov.au/jsp/ncc/cdio/weatherData/av?p_stn_num=023920&p_display_type=availableYears&p_nccObsCode=122\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15326/15326 [5:56:23<00:00,  1.40s/it]  \n"
+      "100%|██████████| 214/214 [04:15<00:00,  1.19s/it]\n"
      ]
     }
    ],
    "source": [
-    "for i in tqdm(range(2609,len(df[\"ID\"])), position=0, leave=True):\n",
+    "for i in tqdm(range(17721,len(df[\"ID\"])), position=0, leave=True):\n",
     "    station_id = df[\"ID\"].iloc[i]\n",
     "    start_year = df[\"Start_Year\"].iloc[i] \n",
     "    bom_id = str(station_id).zfill(6)\n",
@@ -212,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "66a1e73b-e5b1-4d92-8029-29125f535099",
    "metadata": {},
    "outputs": [],
@@ -227,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "4225fda7-6665-4ac0-916d-05b1acc30bb6",
    "metadata": {},
    "outputs": [
@@ -237,7 +229,7 @@
        "['30003']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
